Test: List.of 수정
- Java8 버전에서 지원하지 않아 수정